--- a/templates/dashboard/event_options.html
+++ b/templates/dashboard/event_options.html
@@ -1,5 +1,4 @@
-{% extends "dashboard/base.html" %}
-{% block content %}
+{% extends "dashboard/base.html" %} {% block content %}
 <div class="col-lg-8">
     <!-- Title -->
     <h1>{{event.title}}</h1>
