--- a/templates/dashboard/permission.html
+++ b/templates/dashboard/permission.html
@@ -1,5 +1,4 @@
-{% extends "dashboard/base.html" %}
-{% block content %}
+{% extends "dashboard/base.html" %} {% block content %}
 <!-- Page Heading -->
 <div class="row">
     <div class="col-lg-12">
