--- a/templates/dashboard/view_teams.html
+++ b/templates/dashboard/view_teams.html
@@ -1,5 +1,4 @@
-{% extends "dashboard/base.html" %}
-{% block content %}
+{% extends "dashboard/base.html" %} {% block content %}
 <!-- Event -->
 {% for team in teams %}
 <div class="row">
@@ -7,9 +6,8 @@
         <h3>{{team.name}}</h3>
         <a class="btn btn-primary" href="{{url_for('viewMembers', team_id=team.id)}}">View Members<span class="glyphicon glyphicon-chevron-right"></span></a>
         <a class="btn btn-primary" href="{{url_for('viewList', team_id=team.id)}}">View List<span class="glyphicon glyphicon-chevron-right"></span></a>
-    </div>    
+    </div>
 </div>
 <hr>
 <!-- /.row -->
-{% endfor %}
-{% endblock %}
+{% endfor %} {% endblock %}
