--- a/templates/dashboard/change_password.html
+++ b/templates/dashboard/change_password.html
@@ -1,5 +1,4 @@
-{% extends "dashboard/base.html" %}
-{% block content %}
+{% extends "dashboard/base.html" %} {% block content %}
 <!-- Page Heading -->
 <div class="row">
     <div class="col-lg-12">
@@ -14,14 +13,14 @@
                 </div>
 
                 <div class="form-group">
-                    <label class="col-md-4 control-label">Old Password:</label>  
+                    <label class="col-md-4 control-label">Old Password:</label>
                     <div class="col-md-4">
                         <input name="oldpassword" type="password" class="form-control input-md" required="">
                     </div>
                 </div>
-                
+
                 <div class="form-group">
-                    <label class="col-md-4 control-label">New Password:</label>  
+                    <label class="col-md-4 control-label">New Password:</label>
                     <div class="col-md-4">
                         <input name="newpassword" type="password" class="form-control input-md" required="">
                     </div>
