--- a/templates/dashboard/edit_event.html
+++ b/templates/dashboard/edit_event.html
@@ -1,5 +1,4 @@
-{% extends "dashboard/base.html" %}
-{% block content %}
+{% extends "dashboard/base.html" %} {% block content %}
 <!-- Page Heading -->
 <div class="row">
     <div class="col-lg-12">
@@ -15,7 +14,7 @@
 
                 <!-- Text input-->
                 <div class="form-group">
-                    <label class="col-md-4 control-label" for="fn">Title:</label>  
+                    <label class="col-md-4 control-label" for="fn">Title:</label>
                     <div class="col-md-4">
                         <input name="title" type="text" value="{{event.title}}" class="form-control input-md" required="">
                     </div>
@@ -23,7 +22,7 @@
 
                 <!-- Text input-->
                 <div class="form-group">
-                    <label class="col-md-4 control-label">Start Date:</label>  
+                    <label class="col-md-4 control-label">Start Date:</label>
                     <div class="col-md-4">
                         <input name="starts" type="date" value="{{event.starts}}" class="form-control input-md" required="">
                     </div>
@@ -31,7 +30,7 @@
 
                 <!-- Text input-->
                 <div class="form-group">
-                    <label class="col-md-4 control-label">End Date:</label>  
+                    <label class="col-md-4 control-label">End Date:</label>
                     <div class="col-md-4">
                         <input name="ends" type="date" value="{{event.ends}}" class="form-control input-md" required="">
                     </div>
@@ -55,7 +54,7 @@
 
                 <!-- Text input-->
                 <div class="form-group">
-                    <label class="col-md-4 control-label">Club:</label>  
+                    <label class="col-md-4 control-label">Club:</label>
                     <div class="col-md-4">
                         <input name="club" type="text" value="{{event.club}}" class="form-control input-md" required="">
                     </div>
@@ -145,9 +144,9 @@
                     </div>
                 </div>
                 {% endif %}
-                
+
                 <div class="form-group">
-                    <label class="col-md-4 control-label">Upload Image:</label>  
+                    <label class="col-md-4 control-label">Upload Image:</label>
                     <div class="col-md-4">
                         <input type="file" name="image" accept="image/jpeg">
                     </div>
