--- a/templates/dashboard/edit_profile.html
+++ b/templates/dashboard/edit_profile.html
@@ -1,5 +1,4 @@
-{% extends "dashboard/base.html" %}
-{% block content %}
+{% extends "dashboard/base.html" %} {% block content %}
 <!-- Page Heading -->
 <div class="row">
     <div class="col-lg-12">
@@ -15,7 +14,7 @@
 
                 <!-- Text input-->
                 <div class="form-group">
-                    <label class="col-md-4 control-label">E-Mail:</label>  
+                    <label class="col-md-4 control-label">E-Mail:</label>
                     <div class="col-md-4">
                         <input name="email" type="text" class="form-control input-md" required="" value="{{profile.email}}">
                     </div>
@@ -23,7 +22,7 @@
 
                 <!-- Text input-->
                 <div class="form-group">
-                    <label class="col-md-4 control-label">First Name:</label>  
+                    <label class="col-md-4 control-label">First Name:</label>
                     <div class="col-md-4">
                         <input name="f_name" type="text" class="form-control input-md" required="" value="{{profile.f_name}}">
                     </div>
@@ -31,7 +30,7 @@
 
                 <!-- Text input-->
                 <div class="form-group">
-                    <label class="col-md-4 control-label">Last Name:</label>  
+                    <label class="col-md-4 control-label">Last Name:</label>
                     <div class="col-md-4">
                         <input name="l_name" type="text" class="form-control input-md" required="" value="{{profile.l_name}}">
                     </div>
@@ -39,7 +38,7 @@
 
                 <!-- Text input-->
                 <div class="form-group">
-                    <label class="col-md-4 control-label">Mobile No.:</label>  
+                    <label class="col-md-4 control-label">Mobile No.:</label>
                     <div class="col-md-4">
                         <input name="mobile" type="text" class="form-control input-md" required="" value="{{profile.mobile}}">
                     </div>
@@ -47,7 +46,7 @@
 
                 <!-- Text input-->
                 <div class="form-group">
-                    <label class="col-md-4 control-label">Date of Birth</label>  
+                    <label class="col-md-4 control-label">Date of Birth</label>
                     <div class="col-md-4">
                         <input name="dob" type="date" class="form-control input-md" required="" value="{{profile.dob}}">
                     </div>
@@ -55,7 +54,7 @@
 
                 <!-- Text input-->
                 <div class="form-group">
-                    <label class="col-md-4 control-label">Roll No.:</label>  
+                    <label class="col-md-4 control-label">Roll No.:</label>
                     <div class="col-md-4">
                         <input name="rollno" type="text" class="form-control input-md" required="" value="{{profile.rollno}}">
                     </div>
@@ -63,13 +62,12 @@
 
                 <!-- Multiple Radios (inline) -->
                 <div class="form-group">
-                    <label class="col-md-4 control-label">Gender:</label>
-                    {% if profile.gender == "M" %}
+                    <label class="col-md-4 control-label">Gender:</label> {% if profile.gender == "M" %}
                     <div class="col-md-4">
                         <label class="radio-inline">
                             <input type="radio" name="gender" value="M" checked="checked">
                         Male
-                        </label> 
+                        </label>
                         <label class="radio-inline">
                             <input type="radio" name="gender" value="F">
                         Female
@@ -80,7 +78,7 @@
                         <label class="radio-inline">
                             <input type="radio" name="gender" value="M">
                         Male
-                        </label> 
+                        </label>
                         <label class="radio-inline">
                             <input type="radio" name="gender" value="F" checked="checked">
                         Female
