--- a/templates/dashboard/manage_teams.html
+++ b/templates/dashboard/manage_teams.html
@@ -1,5 +1,4 @@
-{% extends "dashboard/base.html" %}
-{% block content %}
+{% extends "dashboard/base.html" %} {% block content %}
 <!-- Event -->
 {% for team in teams %}
 <div class="row">
@@ -9,9 +8,8 @@
         <a class="btn btn-primary" href="{{url_for('teamList', team_id=team.id)}}">View List<span class="glyphicon glyphicon-chevron-right"></span></a>
         <a class="btn btn-primary" href="{{url_for('deleteTeam', team_id=team.id)}}">Delete Team<span class="glyphicon glyphicon-chevron-right"></span></a>
         <a class="btn btn-primary" href="{{url_for('teamMessage', team_id=team.id)}}">Send Message<span class="glyphicon glyphicon-chevron-right"></span></a>
-    </div>    
+    </div>
 </div>
 <hr>
 <!-- /.row -->
-{% endfor %}
-{% endblock %}
+{% endfor %} {% endblock %}
