--- a/templates/dashboard/message.html
+++ b/templates/dashboard/message.html
@@ -1,5 +1,4 @@
-{% extends "dashboard/base.html" %}
-{% block content %}
+{% extends "dashboard/base.html" %} {% block content %}
 <div class="row">
     <div class="col-lg-12">
         <form class="form-horizontal" action="#" method="post">
@@ -24,9 +23,9 @@
                         </select>
                     </div>
                 </div>
-                
+
                 <div class="form-group">
-                    <label class="col-md-4 control-label">Title:</label>  
+                    <label class="col-md-4 control-label">Title:</label>
                     <div class="col-md-4">
                         <input name="title" type="text" class="form-control input-md" required="">
                     </div>
