--- a/templates/dashboard/post_event.html
+++ b/templates/dashboard/post_event.html
@@ -1,5 +1,4 @@
-{% extends "dashboard/base.html" %}
-{% block content %}
+{% extends "dashboard/base.html" %} {% block content %}
 <!-- Page Heading -->
 <div class="row">
     <div class="col-lg-12">
@@ -13,21 +12,21 @@
                 </div>
                 <!-- Text input-->
                 <div class="form-group">
-                    <label class="col-md-4 control-label" for="fn">Title:</label>  
+                    <label class="col-md-4 control-label" for="fn">Title:</label>
                     <div class="col-md-4">
                         <input name="title" type="text" class="form-control input-md" required="">
                     </div>
                 </div>
                 <!-- Text input-->
                 <div class="form-group">
-                    <label class="col-md-4 control-label">Start Date:</label>  
+                    <label class="col-md-4 control-label">Start Date:</label>
                     <div class="col-md-4">
                         <input name="starts" type="date" class="form-control input-md" required="">
                     </div>
                 </div>
                 <!-- Text input-->
                 <div class="form-group">
-                    <label class="col-md-4 control-label">End Date:</label>  
+                    <label class="col-md-4 control-label">End Date:</label>
                     <div class="col-md-4">
                         <input name="ends" type="date" class="form-control input-md" required="">
                     </div>
@@ -41,7 +40,7 @@
                 </div>
                 <!-- Text input-->
                 <div class="form-group">
-                    <label class="col-md-4 control-label">Club:</label>  
+                    <label class="col-md-4 control-label">Club:</label>
                     <div class="col-md-4">
                         <input name="club" type="text" class="form-control input-md" required="">
                     </div>
@@ -88,12 +87,12 @@
                 </div>
 
                 <div class="form-group">
-                    <label class="col-md-4 control-label">Upload Image:</label>  
+                    <label class="col-md-4 control-label">Upload Image:</label>
                     <div class="col-md-4">
                         <input type="file" name="image" accept="image/jpeg">
                     </div>
                 </div>
-                
+
                 <!-- Button -->
                 <div class="row">
                     <div class="col-md-4"></div>
