--- a/templates/dashboard/view_list.html
+++ b/templates/dashboard/view_list.html
@@ -1,13 +1,11 @@
-{% extends "dashboard/base.html" %}
-{% block content %}
+{% extends "dashboard/base.html" %} {% block content %}
 
 <div class="row">
     <div class="col-md-12">
         <form class="form-horizontal" action="#" method="post">
             <fieldset>
                 <div class="form-group">
-                    <label>List Items:</label>
-                    {% for item in items %}
+                    <label>List Items:</label> {% for item in items %}
                     <div class="checkbox">
                         <label>
                             <input type="hidden" name="{{item.id}}" value="False">
