--- a/templates/dashboard/view_profile.html
+++ b/templates/dashboard/view_profile.html
@@ -1,5 +1,4 @@
-{% extends "dashboard/base.html" %}
-{% block content %}
+{% extends "dashboard/base.html" %} {% block content %}
 <div class="row">
     <div class="col-lg-12">
         <div class="row">
@@ -12,7 +11,7 @@
         <!-- Text input-->
         <div class="form-group">
             <div class="col-md-2"></div>
-            <label class="col-md-3 control-label">E-Mail:</label>  
+            <label class="col-md-3 control-label">E-Mail:</label>
             <div class="col-md-7">
                 <p>{{user.email}}</p>
             </div>
@@ -21,7 +20,7 @@
         <!-- Text input-->
         <div class="form-group">
             <div class="col-md-2"></div>
-            <label class="col-md-3 control-label">First Name:</label>  
+            <label class="col-md-3 control-label">First Name:</label>
             <div class="col-md-7">
                 <p>{{user.f_name}}</p>
             </div>
@@ -30,7 +29,7 @@
         <!-- Text input-->
         <div class="form-group">
             <div class="col-md-2"></div>
-            <label class="col-md-3 control-label">Last Name:</label>  
+            <label class="col-md-3 control-label">Last Name:</label>
             <div class="col-md-7">
                 <p>{{user.l_name}}</p>
             </div>
@@ -39,7 +38,7 @@
         <!-- Text input-->
         <div class="form-group">
             <div class="col-md-2"></div>
-            <label class="col-md-3 control-label">Mobile No.:</label>  
+            <label class="col-md-3 control-label">Mobile No.:</label>
             <div class="col-md-7">
                 <p>{{user.mobile}}</p>
             </div>
@@ -48,7 +47,7 @@
         <!-- Text input-->
         <div class="form-group">
             <div class="col-md-2"></div>
-            <label class="col-md-3 control-label">Date of Birth</label>  
+            <label class="col-md-3 control-label">Date of Birth</label>
             <div class="col-md-7">
                 <p>{{user.dob}}</p>
             </div>
@@ -57,7 +56,7 @@
         <!-- Text input-->
         <div class="form-group">
             <div class="col-md-2"></div>
-            <label class="col-md-3 control-label">Roll No.:</label>  
+            <label class="col-md-3 control-label">Roll No.:</label>
             <div class="col-md-7">
                 <p>{{user.rollno}}</p>
             </div>
