--- a/templates/display/event_list.html
+++ b/templates/display/event_list.html
@@ -11,19 +11,12 @@
     <link rel="icon" type="image/x-icon" href="http://punjab.chitkara.edu.in//Storage/Images/favicon.ico">
 
     <title>
-        {% if event_type=='ongoing' %}
-        Ongoing
-        {% elif event_type=='upcoming' %}
-        Upcoming
-        {% elif event_type=='previous' %}
-        Previous
-        {% endif %} 
-        Events
+        {% if event_type=='ongoing' %} Ongoing {% elif event_type=='upcoming' %} Upcoming {% elif event_type=='previous' %} Previous {% endif %} Events
     </title>
 
     <!-- Bootstrap Core CSS -->
     <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
-    
+
     <!-- Custom Fonts -->
     <link href="{{ url_for('static', filename='font-awesome/css/font-awesome.min.css') }}" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
@@ -31,7 +24,7 @@
 
     <!-- Custom CSS -->
     <link href="{{ url_for('static', filename='css/1-col-portfolio.css') }}" rel="stylesheet">
-    
+
 </head>
 
 <body>
@@ -82,9 +75,7 @@
                     <li class="active">
                         <a href="{{url_for('eventList', event_type='previous')}}">Previous</a>
                     </li>
-                    {% endif %}
-                    
-                    {% if logged == None %}
+                    {% endif %} {% if logged == None %}
                     <li>
                         <a href="{{ url_for('loginPage') }}">Login</a>
                     </li>
@@ -135,8 +126,7 @@
         </div>
         <!-- /.row -->
 
-        <hr>
-        {% endfor %}
+        <hr> {% endfor %}
 
         <!-- Footer -->
         <footer>
