--- a/templates/dashboard/base.html
+++ b/templates/dashboard/base.html
@@ -133,6 +133,11 @@
         <div id="page-wrapper">
 
             <div class="container-fluid">
+                <div class="row">
+                    <div class="col-md-12 error">
+                        <p>{{error}}</p>
+                    </div>
+                </div>
                 {% block content %} {% endblock %}
             </div>
             <!-- /.container-fluid -->
