--- a/templates/display/login_page.html
+++ b/templates/display/login_page.html
@@ -71,6 +71,11 @@
                 <fieldset>
 
                     <div class="row">
+                        <div class="col-md-12 error">
+                            <p>{{error}}</p>
+                        </div>
+                    </div>
+                    <div class="row">
                         <div class="col-md-4"></div>
                         <div class="col-md-4">
                             <h2>Login :</h2><br>
