working to fix list

--- a/templates/dashboard/post_event.html
+++ b/templates/dashboard/post_event.html
@@ -40,6 +40,13 @@
                 </div>
                 <!-- Text input-->
                 <div class="form-group">
+                    <label class="col-md-4 control-label">Contact:</label>
+                    <div class="col-md-4">
+                        <textarea class="form-control" rows="5" name="contact">{{event.contact}}</textarea>
+                    </div>
+                </div>
+                <!-- Text input-->
+                <div class="form-group">
                     <label class="col-md-4 control-label">Club:</label>
                     <div class="col-md-4">
                         <input name="club" type="text" class="form-control input-md" required="">
