List is working fine
Messages, Errors, Interactiveness left.

--- a/templates/dashboard/post_event.html
+++ b/templates/dashboard/post_event.html
@@ -42,7 +42,7 @@
                 <div class="form-group">
                     <label class="col-md-4 control-label">Contact:</label>
                     <div class="col-md-4">
-                        <textarea class="form-control" rows="5" name="contact">{{event.contact}}</textarea>
+                        <textarea class="form-control" rows="5" name="contact"></textarea>
                     </div>
                 </div>
                 <!-- Text input-->
