--- a/templates/dashboard/view_list.html
+++ b/templates/dashboard/view_list.html
@@ -2,29 +2,13 @@
 
 <div class="row">
     <div class="col-md-12">
-        <form class="form-horizontal" action="#" method="post">
-            <fieldset>
-                <div class="form-group">
-                    <label>List Items:</label> {% for item in items %}
-                    <div class="checkbox">
-                        <label>
-                            <input type="hidden" name="{{item.id}}" value={{0}}>
-                            {% if item.done != True %}
-                            <input type="checkbox" name="{{item.id}}" value={{1}}>{{item.item}}
-                            {% else %}
-                            <input type="checkbox" name="{{item.id}}" value={{1}} checked><del>{{item.item}}</del>
-                            {% endif %}
-                        </label>
-                    </div>
-                    {% endfor %}
-                </div>
-                <div class="row">
-                    <div class="col-md-4">
-                        <button type="submit" class="btn btn-primary">Save</button>
-                    </div>
-                </div>
-            </fieldset>
-        </form>
+        {% for item in items %}
+        {% if item.done != True %}
+        <p>{{item.item}} | <a href="{{url_for('doneItem', item_id=item.id)}}">done</a></p>
+        {% else %}
+        <p><del>{{item.item}}</del> | <a href="{{url_for('undoneItem', item_id=item.id)}}">undone</a></p>
+        {% endif %}
+        {% endfor %}
     </div>
 </div>
 
